noinst_DATA = nfacct_log.json nfct_log.json nfctst_log.json nflog_log.json nfq_accept.json nfq_repeat.json
EXTRA_DIST = \
	nfacct_log.py	nfacct_log.json.in \
	nfct_log.py	nfct_log.json.in \
	nfctst_log.py	nfctst_log.json.in \
	nflog_log.py	nflog_log.json.in \
	nfq_accept.py	nfq_accept.json.in \
	nfq_repeat.py	nfq_repeat.json.in
include $(top_srcdir)/examples.inc
